[TH2-2308] Add message type for sent messages